added splash screen with animation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
 
     //canvas
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
+
+    //circular image view
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
